# Elephants

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: CLASS_DIAGRAM.md  CODEBASE.md
include/Elephants/: Game.hpp  HexGrid.hpp  Renderer.hpp  Simulation.hpp  Types.hpp
src/: Game.cpp  HexGrid.cpp  Main.cpp  Renderer.cpp  Simulation.cpp
tests/: SimulationTests.cpp
